tests/semantic_errors/andrei5_4.tl
require "ifj21"

function main()
    local id : nil = "String"
end

main()
